@@ -1,5 +1,6 @@
 2013-XX-XX   1.X.X:
 -------------------
+  * fixed bug in in conda install --force
   * added application API to conda.api module
   * Add -c/--channel and --override-channels flags (issue 121).
   * Add default and system meta-channels, for use in .condarc and with -c
